@@ -1,6 +1,6 @@
 StartTest(function(t) {
 
-    JooseX.Namespace.Depended.Manager.my.INC.unshift('localLib/root1', 'localLib/root2', '/inc')
+    JooseX.Namespace.Depended.Manager.my.INC.unshift('localLib/root1', 'localLib/root2')
     
     if (!Joose.is_NodeJS) t.harness.absolutizeINC(JooseX.Namespace.Depended.Manager.my.INC)
     
@@ -8,30 +8,26 @@ StartTest(function(t) {
     t.plan(1)
 
     
-    t.skipIf(Joose.is_NodeJS, "Won't test lazy classes for now", function () {
+    var async1 = t.beginAsync()
+
     
-        var async1 = t.beginAsync()
-    
+    use([ 'Ensovis.Adapter' ], function () {
         
-        use([ 'Ensovis.Adapter' ], function () {
+        //===========================================================================================================================================================================================================
+        //t.diag('RemoteClass creation')
+        
+        Class('Simple', {
             
-            //===========================================================================================================================================================================================================
-            //t.diag('RemoteClass creation')
+            use : 'Ensovis.Adapter.RemoteMethod.Add',
             
-            Class('Simple', {
+            body : function () {
+                //===========================================================================================================================================================================================================
+                t.diag('Additional dependencies')
                 
-                use : 'Ensovis.Adapter.RemoteMethod.Add',
+                t.ok(Ensovis.Adapter.RemoteMethod.Add, 'Ensovis.Adapter.RemoteMethod.Add is here')
                 
-                body : function () {
-                    //===========================================================================================================================================================================================================
-                    t.diag('Additional dependencies')
-                    
-                    t.ok(Ensovis.Adapter.RemoteMethod.Add, 'Ensovis.Adapter.RemoteMethod.Add is here')
-                    
-                    t.endAsync(async1)
-                }
-            })
+                t.endAsync(async1)
+            }
         })
-    
-    }, 1)
+    })
 })
